--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "axios": "^1.6.2",
+    "framer-motion": "^12.23.25",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1"
   },
@@ -14,7 +16,15 @@
     "build": "react-scripts build"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
-    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
